<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/txtMyOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/butBgClr"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/strMyOrders"
        android:textColor="@color/white" />


    <TextView
        android:id="@+id/txtNotificationSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/butBgClr"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/strNotificationSettings"
        android:textColor="@color/white" />


    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/txtAboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/butBgClr"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/strAboutUs"
        android:textColor="@color/white" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/txtContactUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/butBgClr"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/strContactus"
        android:textColor="@color/white" />
</LinearLayout>