<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/holderBg"
    android:orientation="vertical">

    <include layout="@layout/header_layout"></include>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imgFb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/register_with_fb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/or"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edtUserId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/hintUserId"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHint="@color/hintClr" />

            <EditText
                android:id="@+id/edtPwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:background="@drawable/edittext_bg"
                android:hint="@string/hintPassword"
                android:padding="10dp"
                android:textColorHint="@color/hintClr" />


            <TextView
                android:id="@+id/txtForgotpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/forgotpwd"
                android:textColor="@color/black" />


            <TextView
                android:textSize="@dimen/buttonTxtSize"
                android:id="@+id/butLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/buttonBg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="" />

            <TextView
                android:id="@+id/txtSignInStmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="@string/dnthaveacc" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>